@@ -194,7 +194,7 @@ test_that("aggregateMethyl and MIRAScore", {
     
     # making sure the output is same for input of data.table or bsseq
     # making bsseq version of testBSDT (there should only be one sampleName)
-    testBSDTbsseq = BSseq(M=as.matrix(testBSDT$methylProp),
+    testBSDTbsseq = BSseq(M=as.matrix(testBSDT$methylCount),
                           Cov=as.matrix(testBSDT$coverage),
                           chr=testBSDT$chr,
                           pos=testBSDT$start,
@@ -227,19 +227,19 @@ test_that("scoreDip, findShoulder, and isProfileConcaveUp", {
     binNumber = length(y) #21
     #default shoulderShift is based on length of input (number of bins)
     # ignore warning about "essentially perfect fit"
-    testScore = round(scoreDip(values = y, binCount = binNumber), 2)
+    testScore = round(scoreDip(binnedDT = y), 2)
     expScore = round(log((mean(y[c(1, binNumber)])) / (y[11])), 2)
     expect_equal(testScore, expScore)
     
     #testing that averaging will happen if middle is not lowest value
     y[11] = 5
-    testScore = round(scoreDip(values = y, binCount = binNumber), 2)
+    testScore = round(scoreDip(binnedDT = y), 2)
     expScore = round(log((mean(y[c(1, binNumber)])) / ((y[10] + y[11] + y[12]) / 3)), 2)
     expect_equal(testScore, expScore)
     
     
     
-    #testScore = scoreDip(values = y, binCount = length(y), shoulderShift = 9.5)
+    #testScore = scoreDip(binnedDT = y, shoulderShift = 9.5)
     #check by hand, expect_equal(round(testScore, 2), 3.62)
     
     #test with even bin number
@@ -247,13 +247,13 @@ test_that("scoreDip, findShoulder, and isProfileConcaveUp", {
     y = x^2 + 1
     binNumber = length(y) #10
     # ignore warning about "essentially perfect fit"
-    testScore = round(scoreDip(values = y, binCount = binNumber), 2)
+    testScore = round(scoreDip(binnedDT = y), 2)
     expScore = round(log(mean(y[c(1, binNumber)])
                         / y[5]), 2)
     expect_equal(testScore, expScore)
     #test with non default shoulderShift
     # ignore warning about "essentially perfect fit"
-    testScore = round(scoreDip(values = y, binCount = binNumber, shoulderShift = 3), 2)
+    testScore = round(scoreDip(binnedDT = y, shoulderShift = 3), 2)
     expScore = round(log(mean(y[c(2, 9)]) / y[5]), 2)
     expect_equal(testScore, expScore)
     
@@ -261,13 +261,13 @@ test_that("scoreDip, findShoulder, and isProfileConcaveUp", {
     #chooses pos. 12 because (14+16)/2 is not > 15
     #this test will fail if standard is changed to >=
     jagged = c(16, 14, 15, 11, 12, 7, 4, 4, 7, 12, 11, 15, 14, 16)
-    testScore = round(scoreDip(values = jagged, binCount = 14, shoulderShift = "auto"), 2)
+    testScore = round(scoreDip(binnedDT = jagged, shoulderShift = "auto"), 2)
     expScore = round(log(mean(jagged[c(3, 12)]) / jagged[7]), 2)
     expect_equal(testScore, expScore)
     
     #testing that averaging will happen if middle point is not lowest
     jagged[c(7, 8)] = 8 
-    testScore = round(scoreDip(values = jagged, binCount = 14, shoulderShift = "auto"), 2)
+    testScore = round(scoreDip(binnedDT = jagged, shoulderShift = "auto"), 2)
     expMidpoint = (.5 * jagged[6] + jagged[7] + jagged[8] + .5 * jagged[9]) / 3
     expScore = round(log(mean(jagged[c(3, 12)]) / expMidpoint), 2)
     expect_equal(testScore, expScore)
@@ -285,7 +285,7 @@ test_that("scoreDip, findShoulder, and isProfileConcaveUp", {
     expect_equal(lShoulderShift, 6.5)
     
     #testing scoreDip function with unsymmetrical input
-    unSymScore = round(scoreDip(values = unsymmetric, binCount = 14, 
+    unSymScore = round(scoreDip(binnedDT = unsymmetric, 
                                 shoulderShift = "auto", usedStrand = TRUE), 2)
     expMidpoint = (.5 * unsymmetric[6] + unsymmetric[7] + 
                        unsymmetric[8] + .5 * unsymmetric[9]) / 3
@@ -319,11 +319,11 @@ test_that("scoreDip, findShoulder, and isProfileConcaveUp", {
     expect_true(isProfileConcaveUp(miniDip2, 15))
     
     # testing that scoreDip will give expected score
-    testScore = round(scoreDip(miniDip2, 15), 3)
+    testScore = round(scoreDip(miniDip2), 3)
     expScore = round(log(mean(miniDip2[c(5,11)])/miniDip2[8]), 3)
     expect_equal(testScore, expScore)
     invMiniDip2 = 10 - miniDip2
-    testScore = round(scoreDip(invMiniDip2, 15), 3)
+    testScore = round(scoreDip(invMiniDip2), 3)
     expScore = round(log(mean(invMiniDip2[c(5,11)])/invMiniDip2[8]), 3)
     expect_equal(testScore, expScore)
 })
